# Csuper

./: #csuper-gui.glade#  .gitignore  .gitmodules  CMakeLists.txt  Changelog.md  Makefile  README.md  add_library.sh  blop.txt  compile_translations  csuper-gtk  csuper-gtk.glade  csuper-gui.glade  install_csuper  install_csuper-cli  install_csuper-gtk  install_csuper-gui  run-csuper-cli.sh  run-csuper-gtk.sh  run-csuper-gui.sh  run-csuper.sh  uninstall_csuper  uninstall_csuper-cli  uninstall_csuper-gtk  uninstall_csuper-gui  update_man_pages  update_translations
.csuper/: game_configuration.xml
CodeBlocks/: Comptage points console - Csuper.cbp  Comptage points console - Csuper.depend  Comptage points console - Csuper.layout  all.workspace  csuper-cli.cbp  csuper-cli.workspace  csuper-gtk.cbp  csuper-gtk.workspace  csuper-gui.cbp  csuper-gui.workspace  csuper.cbp  csuper.workspace  libcsuper.cbp  libslope.cbp
Documentation/: .~lock.Structure fichier.ods#  File structure XML.dtd  File structure.ods  Old file structure.ods  Structure fichier.ods
Installation/: csuper-cli  csuper-gtk  csuper-gui  csuper-gui.desktop
Installation/Mime/: csuper.xml
Man/: csuper-cli.1.md  csuper-gtk.1.md  csuper-gui.1.md
Sources/: affichage.c  affichage.h  emplacement_fichier.c  emplacement_fichier.h  fichier.c  fonction.c  interface.c  interface.h  main.c  main.h  menu.c  menu.h  saisie_clavier.c  structure.c  structure.h
Sources/Console/: affichage.c  affichage.h  interface.c  interface.h  main.c  main.h  menu.c  menu.h  saisie_clavier.c  saisie_clavier.h
Sources/System/: argument_main.c  argument_main.h  config.c  config.h  emplacement_fichier.c  emplacement_fichier.h  fichier.c  fichier.h  fonction.c  fonction.h  saisie_clavier.h  structure.c  structure.h
Sources/csuper/: csuper.h  display.c  display.h  interface.c  interface.h  keyboarding.c  keyboarding.h  main.c  main.h  menu.c  menu.h
Sources/csuper-cli/: cin.cpp  cin.h  command_line_option.cpp  command_line_option.h  csuper.h  display.c  display.h  game_cli.cpp  game_cli.h  interface.c  interface.h  keyboarding.c  keyboarding.h  main.c  main.cpp  main.h  menu.c  menu.cpp  menu.h  play_game.cpp  play_game.h  share.cpp  share.h  text_style.cpp  text_style.h
Sources/csuper-gtk/: about.cpp  about.h  calculator_view.cpp  calculator_view.h  change_distributor_dialog.cpp  change_distributor_dialog.h  csu_application.cpp  csu_application.h  csu_widget.cpp  csu_widget.h  display_preferences.cpp  display_preferences.h  exportation_preferences.cpp  exportation_preferences.h  file_properties_dialog.cpp  file_properties_dialog.h  game_configuration_window.cpp  game_configuration_window.h  game_information_view.cpp  game_information_view.h  game_over_dialog.cpp  game_over_dialog.h  import_export_game_configuration_dialog.cpp  import_export_game_configuration_dialog.h  main.cpp  main_window.cpp  main_window.h  menu_display.cpp  menu_display.h  menu_edit.cpp  menu_edit.h  menu_file.cpp  menu_file.h  new_file_assistant.cpp  new_file_assistant.h  new_file_assistant_page_1.cpp  new_file_assistant_page_1.h  new_file_assistant_page_2.cpp  new_file_assistant_page_2.h  new_file_assistant_page_3.cpp  (+9 more)
Sources/csuper-gui/: chart.c  chart.h  csuper-gui.h  exportation_preferences.c  exportation_preferences.h  game_config_preferences.c  game_config_preferences.h  game_configuration.c  game_configuration.h  main.c  main.h  main_menu.c  main_menu.h  main_window.c  main_window.h  new_file_assistant.c  new_file_assistant.h  preferences.c  preferences.h  ressources_windows.rc  toolbar_button_preferences.c  toolbar_button_preferences.h  utils.c  utils.h
Sources/libcsuper/: calculator.c  calculator.cpp  calculator.h  config.h  csu_files.c  csu_files.h  csu_struct.c  csu_struct.h  exceptions.cpp  exceptions.h  export.c  export.h  file.c  file.h  file_system_path.c  file_system_path.h  filename.c  filename.h  game.cpp  game.h  game_config.c  game_config.h  game_configuration.cpp  game_configuration.h  gnuplot.c  gnuplot.h  libcsuper.h  list_game_configuration.cpp  list_game_configuration.h  main_argument.c  main_argument.h  pdf_exportation.cpp  pdf_exportation.h  player.cpp  player.h  preferences.cpp  preferences.h  preferences_chart_exportation.cpp  preferences_chart_exportation.h  preferences_difference_between_player.cpp  (+25 more)
Translations/csuper/: fr.po  messages.pot
Translations/csuper-cli/: fr.po  messages.pot
Translations/csuper-gtk/: fr.po  messages.pot
Translations/csuper-gui/: fr.po  messages.pot
Translations/libcsuper/: fr.po  messages.pot
UI/: csuper-gtk.glade
